# gpt-rs

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: macos-arm64-config.toml
example/: train_config.ron  transformer_config.ron
src/: generate.rs  main.rs  model.rs  tokenizer.rs  train.rs
