[package]
name = "gpt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
arrow = "55.0.0"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
parquet = "55.0.0"
rand = "0.9.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
tch = "0.19.0"
